--- a/gb/22/2/19/n13588888.md
+++ b/gb/22/2/19/n13588888.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/reqcja3941/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/reqcja3941/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/reqcja3941/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵展现纯净完美价值观 陆军中校心驰神往</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/02/id13588896-2202182320561886-600x400.jpg" />
 <h6>2022年2月18日晚，Chris Crotzer先生和妻子Shelly Crotzer一同观看了今年神韵纽约艺术团在华盛顿特区肯尼迪艺术中心歌剧院（The Kennedy Center Opera House）的第五场演出。（麦蕾／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2022年02月19日讯】（大纪元记者麦蕾美国华盛顿DC报导）“我非常陶醉，这些<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>和价值观是非常坚固的，很纯净，很传统。有很多都令人心生共鸣，我认为每一个人都会有共鸣。他们是和睦的，完美的。”美国德州的陆军中校Chris Crotzer观看<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>后表示，神韵演出的精神内涵美妙绝伦，令人心驰神往，现代社会需要这样的传统价值观。</p>
-<p>2月18日晚，Chris Crotzer和妻子Shelly Crotzer一同观看<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在美国首都肯尼迪艺术中心歌剧院（The Kennedy Center Opera House）的第五场演出。</p>
+	<p>【大纪元2022年02月19日讯】（大纪元记者麦蕾美国华盛顿DC报导）“我非常陶醉，这些<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>和价值观是非常坚固的，很纯净，很传统。有很多都令人心生共鸣，我认为每一个人都会有共鸣。他们是和睦的，完美的。”美国德州的陆军中校Chris Crotzer观看<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>后表示，神韵演出的精神内涵美妙绝伦，令人心驰神往，现代社会需要这样的传统价值观。</p>
+<p>2月18日晚，Chris Crotzer和妻子Shelly Crotzer一同观看<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在美国首都肯尼迪艺术中心歌剧院（The Kennedy Center Opera House）的第五场演出。</p>
 <p>“我喜欢演出的色彩和故事。”Shelly动容地说，她最喜欢演绎修炼者在反迫害中坚守信仰的故事。“我非常喜欢这个节目，这个故事真的是让我感到心碎。”</p>
-<p>栩栩如生的<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E5%8A%A8%E6%80%81%E5%A4%A9%E5%B9%95.md#1">动态天幕</a>令Crotzer惊叹不已。他称赞：“天幕背景非常灵巧，我从未见过这样的背景。他们可以腾空而起，飞入高空。这真的令人叹为观止。看起来美不胜收。”</p>
+<p>栩栩如生的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%8A%A8%E6%80%81%E5%A4%A9%E5%B9%95.md#1">动态天幕</a>令Crotzer惊叹不已。他称赞：“天幕背景非常灵巧，我从未见过这样的背景。他们可以腾空而起，飞入高空。这真的令人叹为观止。看起来美不胜收。”</p>
 <p>他们一致认为，演出的色彩“富有生命力”，融合了中西方乐器的现场乐团的演奏“完美”，给予人视觉与听觉的享受。</p>
 <p>演出一开场展现创世主带领众神降临世间，开创人类文明。他们对此感到惊叹。Shelly认为“这是一个全新的概念”。Crotzer表示，他对其中的灵性内涵心生共鸣，“这是一个美妙绝伦的故事。我认为对于所有信神的人来说，都会感到心驰神往。”</p>
-<p>神韵展现的是共产主义统治中国前的<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>和价值观。Crotzer认为，这些传统价值观坚固而纯净，和睦而完美，令人陶醉，内心感到共鸣。Shelly表示认同，“我们从未见过类似的演出，真是令人惊叹！”</p>
+<p>神韵展现的是共产主义统治中国前的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>和价值观。Crotzer认为，这些传统价值观坚固而纯净，和睦而完美，令人陶醉，内心感到共鸣。Shelly表示认同，“我们从未见过类似的演出，真是令人惊叹！”</p>
 <p>神韵致力于复兴遭共产党破坏的传统文化。对此，Crotzer称赞“他们做得好！”</p>
 <p>谈到传统文化对现代社会的意义时，他说：“绝对重要！这样的价值观在现代社会需要得到更多的呈现，需要更大的呼声。很多的传统价值观得到保守的民众的维护。虽然我们不是最大声的，重要的是更多的传统保守理念需要呈现出来，这一点非常美妙。”</p>
 <p>责任编辑：林蓁</p>
@@ -21,43 +21,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/18/n13585991.md#1">协会理事赞神韵复兴中国传统文化</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/18/n13586116.md#1">享受神韵之旅 作家：充满呼唤灵魂的正能量</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/18/n13586192.md#1">医师：神韵感人至深 带来重要的价值</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/18/n13586286.md#1">全家看神韵 诊所老板：不虚此行老少皆宜</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/18/n13586358.md#1">神韵表现传统价值 会计师：庆幸能来看演出</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/18/n13586401.md#1">侦探公司老板：神韵原创节目非常出色</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/18/n13585991.md#1">协会理事赞神韵复兴中国传统文化</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/18/n13586116.md#1">享受神韵之旅 作家：充满呼唤灵魂的正能量</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/18/n13586192.md#1">医师：神韵感人至深 带来重要的价值</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/18/n13586286.md#1">全家看神韵 诊所老板：不虚此行老少皆宜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/18/n13586358.md#1">神韵表现传统价值 会计师：庆幸能来看演出</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/18/n13586401.md#1">侦探公司老板：神韵原创节目非常出色</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513937.md#1" target="_blank">摧毁传统乡绅制与现代法治基础的痞子运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/6/n9230640.md#1" target="_blank">对中国法轮功学员被迫害的调查 (2)</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/28/n10878489.md#1" target="_blank">共产暴政录：文革中教师校长被打死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/20/n2971015.md#1" target="_blank">田璐：让正义和希望之声长鸣于全人类的上空</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605539.md#1">【财商天下】俄入侵乌克兰 北京被拉下水？</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605772.md#1">【新闻看点】认定铁链女是小花梅 中共撤拐卖文书</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/26/n13607594.md#1">【财商天下】失业潮继续扩大 中共如何稳预期</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602624.md#1">【更新2.24】美确信普京欲推翻乌现政权</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602281.md#1">金盏花对皮肤很好 还能消炎止痛、促伤口愈合</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/4/n13555508.md#1">【百年真相】涉嫌谋反 中共上将张阳上吊自杀</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/8/n13563590.md#1">【百年真相】两封匿名信吓昏江青 酿特大政治案</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/10/n13567902.md#1">元宵节俗传承 汤圆为何叫“元宵”？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/11/n13570720.md#1">男子车祸“死亡”濒死期间见到慈悲的神</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/3/n13553481.md#1">【未解之谜】神奇的石头</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/17/n13584751.md#1">【微视频 】谁在炒作俄罗斯乌克兰之战？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/17/n13585096.md#1">【财商天下】九成百亿私募亏损 A股赌性难改</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/17/n13584843.md#1">【拍案惊奇】小花梅与丰县浮尸 江苏男成血奴</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13579538.md#1">带妻子吃情人节大餐 杜汶泽发文讽中共</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13579087.md#1">美报告戳穿中共假相 分析：制约中共一招就行</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/16/n13580817.md#1">中共报复不灵 立陶宛出口额创十年新高</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13579538.md#1">带妻子吃情人节大餐 杜汶泽发文讽中共</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13579321.md#1">章子怡包饺子动作娴熟 所用馅料被指太奢侈</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/16/n13582307.md#1">59岁王杰近况曝光 歌迷惊呼“判若两人”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/16/n13580570.md#1">余苑绮大肠再现阴影 李亚萍泪曝：最近都在化疗</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/16/n13580225.md#1">录取率不到两成 台艺人陈德烈考取乙级厨师</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13579523.md#1">难缠茶渍污垢清光光 这些奇妙方法一定要知道</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/13/n13574357.md#1">你可能对Omicron免疫？这些人感冒后竟增保护力</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/14/n13576016.md#1">28年研究：每天食用橄榄油 降心血管病死亡风险</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13577377.md#1">芝麻汤圆含糖、热量都第一 哪种汤圆热量低？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13577415.md#1">【健康1+1】《柳叶刀》：Omicron大流行将要结束</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/reqcja3941/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/reqcja3941/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/19/n13588888.htm">神韵展现纯净完美价值观 陆军中校心驰神往</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/19/n13588888.htm">神韵展现纯净完美价值观 陆军中校心驰神往</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/reqcja3941/djy/blob/master/gb/22/2/19/n13588888.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/reqcja3941/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/reqcja3941/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13588888.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
