--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -139,7 +139,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/21/n9757183.md#1" target="_blank">杨宁： 中共谎言之“三三制政权共享”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11243139.md#1" target="_blank">治病与救人 警察为近八旬大夫“站岗”</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/6/n11093693.md#1" target="_blank">林辉：“口吞红太阳”与“领袖最脏”罪</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
