--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -139,7 +139,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/6/n11093693.md#1" target="_blank">林辉：“口吞红太阳”与“领袖最脏”罪</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/31/n10010812.md#1" target="_blank">文武：反封建“等级制度”是典型的党文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
